<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/menuSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/MenuSearch"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always"/>
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_white"
            android:title="@string/favorite"
            app:showAsAction="collapseActionView|always"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_theme"
            android:title="@string/setting"
            app:showAsAction="collapseActionView|always"/>
    </group>

</menu>